tests/golden/type_errors/function_type_initializer_param_mismatch.cd
let f: fun(number): number = fun (s: string): number {
  return 1;
};
