tests/golden/type_errors/function_type_initializer_param_mismatch.err
Type error at 1:35: parameter `s` expects number, got string
  let f: fun(number): number = fun (s: string): number {
                                    ^
